--- a/NewsScraper/views/home.handlebars
+++ b/NewsScraper/views/home.handlebars
@@ -31,8 +31,8 @@
   <div class="background-image">
   </div>
   <div class="caption">
-    <h1>Mongo Scraper</h1>
-    <p>New York Times Edition</p>
+    <h1>Scrape The News!</h1>
+    
   </div>
 </div>
 <div class="container-fluid article-container">
