--- a/NewsScraper/public/assets/css/style.css
+++ b/NewsScraper/public/assets/css/style.css
@@ -5,11 +5,11 @@ html {
 
 body {
   margin-bottom: 80px;
-  background-image: url("../images/paper.png");
+  background-image: url("");
 }
 
 .card a:not([href]):not([tabindex]).scrape-new {
-  color: #2196F3;
+  color: teal;
 }
 
 .footer {
@@ -18,11 +18,12 @@ body {
   width: 100%;
   height: 80px;
   color: white;
-  background-color: #2196f3;
+  background-color: teal;
 }
 
 .navbar {
   margin-bottom: 0;
+  background-color: teal;
 }
 
 .jumbotron {
@@ -47,7 +48,7 @@ body {
 
 .jumbotron .background-image {
   height: 100%;
-  background-image: url("../images/newspaper.jpg");
+  background-image: url("");
   background-size: cover;
 }
 
@@ -83,7 +84,7 @@ body {
 }
 
 .card .card-header {
-  background-color: #2196f3;
+  background-color: teal;
   position: relative;
   padding-top: 30px;
   padding-bottom: 30px;
@@ -123,7 +124,7 @@ body {
   padding-left: 10px;
   margin: 0;
   font-weight: 800;
-  background: #0c7cd5;
+  background: teal;
 }
 
 .navbar-nav > li > a.scrape-new,
